@@ -1,4 +1,9 @@
 2015-02-17  Jean-Louis Martineau <martineau@zmanda.com>
+	* common-src/bsdtcp-security.c, common-src/krb5-security.c,
+	* common-src/local-security.c, common-src/rsh-security.c,
+	* common-src/ssh-security.c: Fix bug found by coverity.
+
+2015-02-17  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/amadmin.c: Fix crash in tape command.
 
 2015-02-15  Jean-Louis Martineau <martineau@zmanda.com>
